Update fmlloader/src/main/java/net/minecraftforge/fml/loading/moddiscovery/ModFile.java
Co-authored-by: Paint_Ninja <PaintNinja@users.noreply.github.com>